[gd_scene load_steps=18 format=3 uid="uid://81oaphkmv4j3"]

[ext_resource type="Script" path="res://Globaali.gd" id="1_u0tlp"]
[ext_resource type="PackedScene" uid="uid://gktnyqf3rju6" path="res://game_over_ruutu.tscn" id="2_382w4"]
[ext_resource type="PackedScene" uid="uid://ccxl4u1mjftgb" path="res://pause_ruutu.tscn" id="3_skrl7"]
[ext_resource type="PackedScene" uid="uid://d1c6axf23uaq5" path="res://help_ruutu.tscn" id="4_u4uma"]
[ext_resource type="Script" path="res://ss2d_varjot.gd" id="5_v1ixm"]
[ext_resource type="PackedScene" uid="uid://kmwces4tj1hh" path="res://pelaaja.tscn" id="11_2k37q"]
[ext_resource type="Texture2D" uid="uid://dite5ccabklvd" path="res://grafiikka/LightFlower.png" id="12_1lgvd"]
[ext_resource type="PackedScene" uid="uid://dm1ghf6hoypw" path="res://perhonen.tscn" id="13_pip84"]
[ext_resource type="PackedScene" uid="uid://c3iy6ln4bag18" path="res://vihollinen.tscn" id="14_ibbcy"]
[ext_resource type="PackedScene" uid="uid://b6cwc10i6c0w4" path="res://kuoppa.tscn" id="15_lm0b0"]
[ext_resource type="PackedScene" uid="uid://bjtq0prowl168" path="res://ovi_vasen.tscn" id="16_arssj"]
[ext_resource type="PackedScene" uid="uid://bjnux2y7mk47q" path="res://ovi_oikea.tscn" id="17_nf7l5"]
[ext_resource type="PackedScene" uid="uid://8dvswt3oh3iq" path="res://ovi_pysty_oikea.tscn" id="18_gv4dt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_adu2w"]
radius = 14.9721
height = 34.9547

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bfk2c"]
radius = 17.4773
height = 34.9547

[sub_resource type="Curve2D" id="Curve2D_3g634"]
_data = {
"points": PackedVector2Array(-1.678, 21.6889, 1.678, -21.6889, 2, -3, 0, 0, 0, 0, 3, -17, 0, 0, 0, 0, 41, -33, 0, 0, 0, 0, 88, -24, -24.7487, -9.8995, 24.7487, 9.8995, 173, 10, -10.6066, -42.4264, 10.6066, 42.4264, 203, 88, 0, 0, 0, 0, 230, 176, 0, 0, 0, 0, 207, 209, 32.2774, -9.41974, -32.2774, 9.41974, 166, 246, 0, 0, 0, 0, 89, 262, 0, 0, 0, 0, -5, 302, 14.2952, -38.6812, -14.2952, 38.6812, -53, 346, 0, 0, 0, 0, -89, 409, 0, -1.88775, 0, 1.88775, -120, 463, 0, 0, 0, 0, -165, 453, 0, 0, 0, 0, -207, 413, 0, 0, 0, 0, -195, 328, 0, 0, 0, 0, -151, 279, 0, 0, 0, 0, -104, 253, 0, 0, 0, 0, -42, 245, 0, 0, 0, 0, -8, 239, 0, 0, 0, 0, 29, 237, 0, 0, 0, 0, 83, 212, 0, 0, 0, 0, 129, 178, 0, 0, 0, 0, 139, 130, 18.2684, 25.0173, -18.2684, -25.0173, 135, 74, 0, 0, 0, 0, 67, 40, 0, 0, 0, 0, 13, 26, 0, 0, 0, 0, 2, -3)
}
point_count = 29

[sub_resource type="Curve2D" id="Curve2D_17kml"]
_data = {
"points": PackedVector2Array(0, 0, -73.2334, -1.77742, 79, 21, 0, 0, 0, 0, 12, 24, 0, 0, 0, 0, -105, 12, 0, 0, 0, 0, -173, 0, 0, 0, 0, 0, -227, -18, 0, 0, 0, 0, -248, -117, 0, 0, 0, 0, -238, -234, 0, 0, 0, 0, -228, -333, 0, 0, 0, 0, -224, -403, 0, 0, 0, 0, -226, -462, 0, 0, 0, 0, -209, -501, 0, 0, 0, 0, -149, -527, 0, 0, 0, 0, -95, -524, 0, 0, 0, 0, -61, -497, 0, 0, 0, 0, -42, -441, 0, 0, 0, 0, -34, -350, 0, 0, 0, 0, -28, -268, 0, 0, 0, 0, -32, -181, 0, 0, 0, 0, -9, -146, 0, 0, 0, 0, 63, -121, 0, 0, 0, 0, 85, -129, 0, 0, 0, 0, 98, -152, 0, 0, 0, 0, 93, -173, 0, 0, 0, 0, 75, -184, 0, 0, 0, 0, 51, -185, 0, 0, 0, 0, 16, -195, 0, 0, 0, 0, -4, -208, 0, 0, 0, 0, -13, -278, 0, 0, 0, 0, -17, -339, 0, 0, 0, 0, -27, -440, 0, 0, 0, 0, -43, -508, 0, 0, 0, 0, -84, -554, 0, 0, 0, 0, -156, -571, 0, 0, 0, 0, -228, -562, 0, 0, 0, 0, -271, -530, 0, 0, 0, 0, -278, -450, 0, 0, 0, 0, -272, -354, 0, 0, 0, 0, -269, -244, 0, 0, 0, 0, -289, -97, 0, 0, 0, 0, -249, 9, 0, 0, 0, 0, -198, 39, 0, 0, 0, 0, -124, 44, 0, 0, 0, 0, -44, 44, 0, 0, 0, 0, 44, 51, 0, 0, 0, 0, 103, 50, 0, 0, 0, 0, 111, 37, 0, 0, 0, 0, 106, 19, 0, 0, 0, 0, 93, 19, 0, 0, 0, 0, 80, 20)
}
point_count = 49

[node name="Maailma3" type="Node2D" groups=["valonlahde"]]
script = ExtResource("1_u0tlp")

[node name="KayttoLiittyma" type="CanvasLayer" parent="." groups=["UI"]]
process_mode = 3

[node name="GameOverRuutu" parent="KayttoLiittyma" groups=["UI", "gameoverruutu"] instance=ExtResource("2_382w4")]
process_mode = 3
visible = false

[node name="pause_ruutu" parent="KayttoLiittyma" groups=["UI", "pauseruutu"] instance=ExtResource("3_skrl7")]
process_mode = 3
visible = false

[node name="HelpRuutu" parent="KayttoLiittyma" groups=["UI", "helpruutu"] instance=ExtResource("4_u4uma")]
visible = false

[node name="Tiilet" type="CanvasGroup" parent="."]
script = ExtResource("5_v1ixm")

[node name="Polygon2D1" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(2050.17, -371.337, 1480.77, -375.47, 1011.1, -424.729, 1328.95, -1086.97, 2356.92, -1108.38, 2337.83, -656.705, 2305.78, -471.385, 2246.96, -417.945, 2207.78, -376.953, 2188.64, -265.744, 2190.06, -206.347, 2197.13, -113.009, 2198.54, -47.9555, 2204.21, 12.8526, 2248.04, 93.4621, 2325.82, 167.003, 2433.3, 236.3, 2496.95, 297.102, 2716.14, 367.821, 2832.11, 380.551, 2946.61, 395.703, 2997.07, 404.964, 3022.69, 406.554, 3003.57, 421.066, 3001.89, 448.008, 2982.26, 462.475, 2897.16, 459.747, 2793.93, 452.679, 2648.26, 411.664, 2532.3, 387.625, 2446.03, 349.445, 2409.26, 315.5, 2331.48, 273.072, 2279.58, 235.041, 2232.49, 209.814, 2198.42, 187.114, 2181.44, 164.007, 2179.96, 151.266, 2178.09, 138.53, 2177.4, 129.751, 2178.25, 102.546, 2169.43, 82.3936, 2136.67, 55.9448, 2082.5, 49.6308, 2049.67, 37.0775, 2049.74, -44.8671)

[node name="Polygon2D2" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(2358.34, 1279.55, 2455.43, 1932.28, 1560.5, 1959.18, 1516.86, 1276.27, 1489.84, -382.081, 2045.05, -375.349, 2041.26, -75.1888, 2050.78, 205.78, 2069.83, 272.452, 2078.38, 398.523, 2084.36, 500.782, 2105.75, 523.352, 2178.89, 523.857, 2332.67, 512.631, 2423.59, 515.996, 2497.68, 536.188, 2528, 567.998, 2562.01, 621.997, 2585, 717, 2593.71, 799.559, 2607.71, 878.04, 2631.24, 952.344, 2672.66, 952.163, 2718.02, 950.902, 2789.22, 957.979, 2836.5, 980.38, 2844.1, 1004.37, 2826.2, 1021.23, 2775.8, 1007.97, 2741.58, 1000.14, 2704.66, 990.064, 2624.03, 989.759, 2550.09, 972.575, 2527.77, 899.247, 2522.73, 765.695, 2495, 648.528, 2447.11, 589.333, 2343.82, 570.411, 2244.29, 577.972, 2170.03, 609.512, 2176.25, 710.258, 2180.03, 811.052, 2188.85, 915.625, 2176.25, 1021.46, 2177.51, 1114.69, 2187.6, 1205.41, 2212.82, 1257.03, 2268.23, 1275.95, 2347.38, 1277.85)

[node name="Polygon2D3" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(3351.16, 1250.07, 3572.54, 1251.61, 3659.48, 1259.56, 3733.24, 1296.41, 3760.58, 1389.19, 3756.99, 1435.17, 3753.92, 1821.22, 2417.87, 1739.42, 2357.33, 1284.19, 2358.81, 1280.22)

[node name="Polygon2D4" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(3898.63, 1155.68, 3730.8, 1167.2, 3555.98, 1137.47, 3327.65, 1132.72, 3203.98, 1145.8, 3098.69, 1151.87, 2996.1, 1173.74, 2875.01, 1168.69, 2642.92, 1170.37, 2499.97, 1167.01, 2336.73, 1168.79, 2333.47, 1098.05, 2326.74, 961.829, 2341.88, 840.74, 2340.2, 770.105, 2336.73, 734.721, 2367.11, 726.371, 2397.43, 727.99, 2418.54, 795.394, 2423.58, 843.271, 2426.1, 928.946, 2438.71, 1033.52, 2467.71, 1095.22, 2568.48, 1116.67, 2704.55, 1117.93, 2820.46, 1119.19, 2917.47, 1115.41, 2975.43, 1096.52, 3032.1, 1082.62, 3045.96, 1051.16, 3039.69, 1028.48, 3024.66, 980.737, 2984.97, 860.094, 2942.1, 771.205, 2877.67, 711.725, 2838.28, 690.508, 2783.72, 655.545, 2729.54, 618.054, 2698.43, 595.689, 2684.13, 577.676, 2670.77, 552.589, 2789.83, 555.903, 3026.24, 585.472, 3196.09, 572.775, 3391.34, 569.6, 3648.5, 564.838, 3819.94, 568.012, 3988.21, 568.012, 4077.87, 573.513, 4204.95, 578.95, 4218.35, 623.59, 4215.85, 657.238, 4199.02, 675.763, 4158.12, 677.201, 4106.5, 674.889, 4026.31, 652.148, 3927.42, 645.762, 3870.17, 658.109, 3824.15, 681.681, 3771.11, 690.888, 3705.65, 714.053, 3375.47, 812.472, 3197.69, 855.354, 3169.13, 890.262, 3153.23, 985.499, 3156.47, 1058.48, 3191.33, 1074.38, 3286.97, 1075.48, 3467.68, 1083.34, 3624.83, 1083.34, 3823.5, 1092.32, 3888.61, 1096.8, 3906.58, 1108.03, 3912.21, 1118.14, 3909.94, 1132.73)

[node name="Polygon2D5" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(3934.35, 1785.85, 3926.86, 1460.76, 3928.62, 1394.18, 3939.15, 1319.08, 3950.32, 1287.44, 3975.35, 1263.98, 4025.1, 1256.38, 4218.81, 1248.78, 4510.89, 1242.43, 4750.59, 1239.26, 4865.42, 1236.36, 4868.27, 1243.48, 4879.4, 1845.27, 3752.07, 1826.87, 3755.79, 1786.74)

[node name="Polygon2D6" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(4046.77, 1088.84, 4034.09, 1021.63, 4075.13, 941.022, 4110.48, 880.207, 4176.95, 823.63, 4250.5, 805.251, 4339.59, 812.329, 4437.17, 822.228, 4568.69, 839.199, 4718.7, 852.778, 4779.35, 858.722, 4841.19, 876.544, 4869.76, 911.04, 4870.92, 965.755, 4842.38, 1029.98, 4769.83, 1078.73, 4700.67, 1107.03, 4566.27, 1110.58, 4363.15, 1114.15, 4183.18, 1115.04)

[node name="Polygon2D7" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(4561.99, 832.054, 4333.81, 806.545, 4364.87, 777.857, 4408.72, 715.694, 4420, 665, 4425.76, 640.63, 4430.45, 566.884, 4418.78, 508.797, 4395.74, 473.446, 4350.38, 466.711, 4319, 455.001, 4264.57, 441.04, 4162.78, 431.7, 4011.95, 434.368, 3855.77, 445.047, 3654.21, 454.391, 3553.26, 455.721, 3455.65, 466.621, 3434.9, 460.031, 3433.44, 424.9, 3442.18, 410.338, 3466.69, 398.537, 3602.15, 395.658, 3748.98, 394.322, 3827.74, 383.644, 4035.98, 367.626, 4186.81, 363.622, 4288.26, 354.277, 4367.02, 355.613, 4432.42, 358.276, 4509.84, 386.313, 4580.88, 423.648, 4620.61, 490.428, 4576.55, 601.452, 4526.37, 706.599, 4543.5, 793.898)

[node name="Polygon2D8" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(4625.73, 492.438, 4679.74, 513.44, 4749.41, 542.654, 4822.83, 556.142, 4913.48, 571.875, 4956.87, 578.453, 4986.63, 583.066, 4997.39, 596.441, 4981.96, 617.825, 4927.07, 632.805, 4876.02, 633.305, 4772.64, 634.054, 4679.74, 628.066, 4628.8, 609.335, 4594.65, 587.074, 4589.72, 582.151, 4624.99, 497.498, 4625, 497.496)

[node name="Polygon2D9" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(4867.4, 1237.13, 4905.9, 1223.96, 4962.58, 1173.56, 4977.72, 1092.94, 4989.06, 987.105, 4989.06, 893.871, 4991.58, 845.994, 4998.87, 785.013, 5025.84, 747.549, 5081.29, 720.591, 5144.12, 701.047, 5120.16, 496.83, 5032.59, 191.562, 4860.21, -104.097, 5243.21, -137.71, 5795.93, -151.164, 5859.9, 967.537, 5883.93, 1632.29, 5843.97, 1947.42, 4888.05, 1843.28)

[node name="Polygon2D10" type="Polygon2D" parent="Tiilet"]
polygon = PackedVector2Array(5102.39, 463.645, 5029.57, 451.89, 4909.7, 418.927, 4741.89, 363.49, 4644.5, 318.54, 4525.65, 267.584, 4377.13, 238.298, 4282.42, 227.513, 4148.18, 233.699, 4097.56, 243.103, 4011.03, 265.074, 3904.33, 277.141, 3788.51, 279.814, 3691.41, 286.941, 3425.79, 301.784, 3269.83, 313.349, 3158.2, 316.381, 2950.98, 307.518, 2814.91, 240.732, 2675.05, 184.036, 2593.62, 152.795, 2516.59, 93.1031, 2489.22, 21.4713, 2426.38, -31.2937, 2357.91, -88.5356, 2331.51, -129.234, 2321.37, -151.233, 2327.26, -170.788, 2346.97, -179.196, 2417.13, -173.235, 3264.5, -99.072, 3710.56, -78.4362, 4541.74, -114.335, 4858.14, -98.9627, 4935.99, 31.7321, 5024.39, 182.311, 5076.08, 345.628)

[node name="Pelaaja" parent="." instance=ExtResource("11_2k37q")]
position = Vector2(3818, 1727)
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 1.22173
floor_snap_length = 14.0

[node name="Kukat" type="Node" parent="."]

[node name="Kukka" type="Area2D" parent="Kukat"]
position = Vector2(3471, 1231)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka2" type="Area2D" parent="Kukat"]
position = Vector2(3854, 1767)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka2"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka2"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka2" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka2/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka3" type="Area2D" parent="Kukat"]
position = Vector2(2734, 1095)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka3"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka3"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka3" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka3/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka4" type="Area2D" parent="Kukat"]
position = Vector2(2321, 491)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka4"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka4"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka4" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka4/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka5" type="Area2D" parent="Kukat"]
position = Vector2(4671, 1219)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka5"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka5"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka5" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka5/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka6" type="Area2D" parent="Kukat"]
position = Vector2(3693, 542)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka6"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka6"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka6" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka6/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Kukka7" type="Area2D" parent="Kukat"]
position = Vector2(3779, 367)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Kukat/Kukka7"]
rotation = 2.41614
texture = ExtResource("12_1lgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka7"]
position = Vector2(-0.28493, 1.38523)
shape = SubResource("CapsuleShape2D_adu2w")

[node name="Area2D" type="Area2D" parent="Kukat/Kukka7" groups=["kukka"]]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kukat/Kukka7/Area2D"]
position = Vector2(-0.284943, 1.38524)
shape = SubResource("CapsuleShape2D_bfk2c")

[node name="Perhonen" parent="." instance=ExtResource("13_pip84")]
position = Vector2(4128, 502)

[node name="Path2D" type="Path2D" parent="Perhonen"]
position = Vector2(0, 1)
curve = SubResource("Curve2D_3g634")

[node name="Perhonen2" parent="." instance=ExtResource("13_pip84")]
position = Vector2(2525, 1230)

[node name="Path2D" type="Path2D" parent="Perhonen2"]
position = Vector2(-12, -24)
curve = SubResource("Curve2D_17kml")

[node name="Node2D" type="Node2D" parent="."]

[node name="Vihollinen" parent="Node2D" groups=["vihollinen"] instance=ExtResource("14_ibbcy")]
position = Vector2(2906, 1099)

[node name="Kuoppa" parent="Node2D" instance=ExtResource("15_lm0b0")]
position = Vector2(3039, 1052)
rotation = -1.57218

[node name="Kuoppa2" parent="Node2D" instance=ExtResource("15_lm0b0")]
position = Vector2(3164, 1048)
rotation = 1.25991

[node name="Koynnosovet" type="Node" parent="." groups=["koynnosovet"]]

[node name="Ovi_x" type="Node2D" parent="Koynnosovet" groups=["oviV", "x"]]
position = Vector2(5064, 591)
rotation = 1.47207

[node name="Ovi_vasen" parent="Koynnosovet/Ovi_x" instance=ExtResource("16_arssj")]
position = Vector2(-3.69549e-06, 8.38041e-05)

[node name="Ovi2_x" type="Node2D" parent="Koynnosovet" groups=["oviO", "x"]]
position = Vector2(2117, 155)
rotation = 1.46682

[node name="Ovi_oikea" parent="Koynnosovet/Ovi2_x" instance=ExtResource("17_nf7l5")]

[node name="Ovi7_x" type="Node2D" parent="Koynnosovet" groups=["oviV", "x"]]
position = Vector2(2619, 590)
rotation = 1.14474

[node name="Ovi3_y" type="Node2D" parent="Koynnosovet" groups=["risti", "y"]]
position = Vector2(3294, 441)

[node name="Ovi_pysty_oikea" parent="Koynnosovet/Ovi3_y" instance=ExtResource("18_gv4dt")]

[node name="Ovi4_z" type="Node2D" parent="Koynnosovet" groups=["oviO", "z"]]
position = Vector2(4530, 1177)

[node name="Ovi5_z" type="Node2D" parent="Koynnosovet" groups=["oviO", "z"]]
position = Vector2(2672, 1053)

[node name="Ovi6_z" type="Node2D" parent="Koynnosovet" groups=["oviO", "z"]]
position = Vector2(4190, 297)

[node name="Ovi_oikea" parent="Koynnosovet/Ovi6_z" instance=ExtResource("17_nf7l5")]

[connection signal="body_entered" from="Kukat/Kukka" to="Kukat/Kukka" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka2" to="Kukat/Kukka2" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka3" to="Kukat/Kukka3" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka4" to="Kukat/Kukka4" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka5" to="Kukat/Kukka5" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka6" to="Kukat/Kukka6" method="_on_body_entered"]
[connection signal="body_entered" from="Kukat/Kukka7" to="Kukat/Kukka7" method="_on_body_entered"]
